tests/esproposal_export_star_as.ignore/__snapshots__/jsfmt.spec.js.snap
exports[`test dest.js 1`] = `
"// @flow

import {source} from \"./test\";

var a: number = source.num;
var b: string = source.num; // Error: num ~> string

var c: string = source.str;
var d: number = source.str; // Ignored error: num ~> string
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow

import { source } from \"./test\";

var a: number = source.num;
var b: string = source.num;
// Error: num ~> string
var c: string = source.str;
var d: number = source.str; // Ignored error: num ~> string
"
`;

exports[`test source.js 1`] = `
"// @flow

export var str = \'asdf\';
export var num = 42;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow

export var str = \"asdf\";
export var num = 42;
"
`;
